fix element cutoff when shrinking window size

--- a/src/app/ui/account-creation/account-setup/SetupUI/QuestBoard/QuestBoardItems/QuestBoardItem/styles.module.css
+++ b/src/app/ui/account-creation/account-setup/SetupUI/QuestBoard/QuestBoardItems/QuestBoardItem/styles.module.css
@@ -5,6 +5,7 @@
   column-gap: 1rem;
   /* DELETE TRANSITION STYLES */
   overflow: hidden;
+  min-height: fit-content;
   max-height: var(--item-height);
   opacity: 1;
   transition: max-height var(--transition-duration) ease-in-out,
@@ -12,6 +13,7 @@
 }
 
 .questItem.removing {
+  min-height: 0;
   max-height: 0;
   opacity: 0;
 }
@@ -37,6 +39,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+  min-height: fit-content;
 }
 
 .questDetails p,
